@@ -18,6 +18,7 @@ FIXED
 * xdata/xodtemplate.c bug in option-deprecation code (John Frickson)
 * Wildcard searching causes service status links to not work properly (John Frickson)
 * Quick search with no hits shows a permission denied error (John Frickson)
+# Setting a service as its own parent is not caught by the sanity checker (-v) and causes a segfault (John Frickson)
 
 
 4.3.1 - 2017-02-23
